# advent-of-code-2022

./: .clang-format  .gitignore  CMakeLists.txt  README.md  copy-resources.cmake
src/: day01.h  io.cpp  io.h  main.cpp  stringUtils.cpp  stringUtils.h  vectorUtils.h
src/solutions/day01/: day01.cpp  day01.h
src/solutions/day02/: day02.cpp  day02.h
